<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.LoginActivity">


    <RelativeLayout
        android:id="@+id/itemsnya"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/layout_bg_round_green_v2"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_signin_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_admin"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="#99000000"/>

        <LinearLayout
            android:id="@+id/layout_item_login"
            android:layout_below="@id/text_signin_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_bg_round">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/layout_bg_round_blue">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/orang_dua"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/userLogin"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="#fff"
                    android:hint="@string/username"
                    android:layout_margin="7dp"
                    android:maxLines="1"
                    android:textSize="13sp"
                    android:focusableInTouchMode="true"
                    tools:ignore="Autofill,TextFields" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_bg_round">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/layout_bg_round_blue">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/kunci_dua"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/passLogin"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="#fff"
                    android:hint="@string/password"
                    android:layout_margin="7dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="13sp"
                    android:focusableInTouchMode="true"
                    tools:ignore="Autofill" />

            </LinearLayout>

        </LinearLayout>


        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:layout_below="@id/layout_item_login"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="1dp"
            fancy:mfb_defaultColor="@color/colorPrimaryDark"
            fancy:mfb_focusColor="#75D81B60"
            fancy:mfb_text="Sign In"
            fancy:mfb_radius="3dp"
            fancy:mfb_textSize="16sp"
            fancy:mfb_textColor="#fff"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pgbarlogin"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>