<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_today"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="-5dp"
                    tools:ignore="ContentDescription" />

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spin_hari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_tgldetail"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="-5dp"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_tanggal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date"
                        android:hint="@string/tgl_bln_tahun_31_12_2019"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:weightSum="2.3"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1.3"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_timedetail"
                        android:layout_marginRight="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="-5dp"
                        tools:ignore="ContentDescription" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_waktu_mulai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_waktu_mulai"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/jam_mulai"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="15dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_waktu_selesai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_waktu_selesai"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/jam_selesai"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_location"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="-5dp"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_lokasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_lokasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/tempat_ex_rumah_ibu_budi"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="65dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="65dp"
                android:layout_marginEnd="15dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Alamat"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_pemateri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_pemateri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/keterangan"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/alamatPeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginLeft="65dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="65dp"
                android:layout_marginEnd="15dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/statusPeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="-- Peta Berhasil Ditambahkan --"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <com.rilixtech.materialfancybutton.MaterialFancyButton
                android:id="@+id/btnAddMaps"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                fancy:mfb_borderWidth="1dp"
                fancy:mfb_borderColor="@color/colorDark"
                fancy:mfb_defaultColor="@android:color/transparent"
                fancy:mfb_focusColor="@color/colorPrimary"
                fancy:mfb_radius="0dp"
                fancy:mfb_text="Tambah Peta Lokasi"
                fancy:mfb_textSize="12sp"
                android:layout_marginLeft="65dp"
                fancy:mfb_textColor="@color/colorDark"
                android:layout_marginStart="65dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"/>

            <com.rilixtech.materialfancybutton.MaterialFancyButton
                android:id="@+id/btnEditMaps"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                fancy:mfb_borderWidth="1dp"
                fancy:mfb_borderColor="@color/colorAccent"
                fancy:mfb_defaultColor="@android:color/transparent"
                fancy:mfb_focusColor="@color/colorPrimary"
                fancy:mfb_radius="0dp"
                fancy:mfb_text="Edit Peta Lokasi"
                fancy:mfb_textSize="12sp"
                android:layout_marginLeft="65dp"
                fancy:mfb_textColor="@color/colorAccent"
                android:layout_marginStart="65dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

    <com.rilixtech.materialfancybutton.MaterialFancyButton
        android:id="@+id/btnSimpan"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        fancy:mfb_borderWidth="1dp"
        fancy:mfb_defaultColor="@color/colorPrimaryDark"
        fancy:mfb_focusColor="@color/colorAccent"
        fancy:mfb_radius="0dp"
        fancy:mfb_text="Simpan Data"
        fancy:mfb_textSize="12sp"
        fancy:mfb_textColor="@color/colorSalju"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"/>

    <ProgressBar
        android:id="@+id/pgbar_input_kajian"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>


</RelativeLayout>



